<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/result_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/result"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/resultbox"
            android:gravity="right"
            android:text="@string/zero"
            android:textColor="#690050"
            android:textSize="70sp" 
            android:clickable="true"/>
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/saved_numbers_row"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_below="@id/result_container"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/save_number1"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            style="@style/saveNumber"
            android:background="@drawable/textboxborder"/>

        <TextView
            android:id="@+id/save_number2"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            style="@style/saveNumber"
            android:background="@drawable/textboxborder"/>

        <TextView
            android:id="@+id/save_number3"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            style="@style/saveNumber"
            android:background="@drawable/textboxborder"/>
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/top_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/saved_numbers_row"
        android:layout_marginLeft="10dp"
        android:gravity="left"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/seven"
            style="@style/numberButton"
            android:text="@string/seven" />

        <Button
            android:id="@+id/eight"
            style="@style/numberButton"
            android:text="@string/eight" />

        <Button
            android:id="@+id/nine"
            style="@style/numberButton"
            android:text="@string/nine" />

        <Button
            android:id="@+id/div"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="onClick"
            android:text="@string/div"
            android:textColor="#690050"
            android:textSize="70sp" />
    </LinearLayout>

    <View
        android:id="@+id/horizontal_divider_one"
        android:layout_width="400dp"
        android:layout_height="1dp"
        android:layout_alignBottom="@id/top_row"
        android:background="#0F0F0F" />

    <LinearLayout
        android:id="@+id/middle_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_row"
        android:layout_marginLeft="10dp"
        android:gravity="left"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/four"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="onClick"
            android:text="@string/four"
            android:textColor="#690050"
            android:textSize="70sp" />

        <Button
            android:id="@+id/five"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="onClick"
            android:text="@string/five"
            android:textColor="#690050"
            android:textSize="70sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/six"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="onClick"
            android:text="@string/six"
            android:textColor="#690050"
            android:textSize="70sp" />

        <Button
            android:id="@+id/mul"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="onClick"
            android:text="@string/mul"
            android:textColor="#690050"
            android:textSize="70sp" />
    </LinearLayout>

    <View
        android:id="@+id/horizontal_divider_two"
        android:layout_width="400dp"
        android:layout_height="1dp"
        android:layout_alignBottom="@id/middle_row"
        android:background="#0F0F0F" />

    <LinearLayout
        android:id="@+id/bottom_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/middle_row"
        android:layout_marginLeft="10dp"
        android:gravity="left"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/one"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="onClick"
            android:text="@string/one"
            android:textColor="#690050"
            android:textSize="70sp" />

        <Button
            android:id="@+id/two"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="onClick"
            android:text="@string/two"
            android:textColor="#690050"
            android:textSize="70sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/three"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="onClick"
            android:text="@string/three"
            android:textColor="#690050"
            android:textSize="70sp" />

        <Button
            android:id="@+id/add"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="onClick"
            android:text="@string/add"
            android:textColor="#690050"
            android:textSize="70sp" />
    </LinearLayout>

    <View
        android:id="@+id/horizontal_divider_three"
        android:layout_width="400dp"
        android:layout_height="1dp"
        android:layout_alignBottom="@id/bottom_row"
        android:background="#0F0F0F" />

    <LinearLayout
        android:id="@+id/base_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bottom_row"
        android:layout_marginLeft="10dp"
        android:gravity="left"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/clear"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="onClick"
            android:text="@string/clear"
            android:textColor="#690050"
            android:textSize="70sp" />

        <Button
            android:id="@+id/zero"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="onClick"
            android:text="@string/zero"
            android:textColor="#690050"
            android:textSize="70sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/eq"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="onClick"
            android:text="@string/equals"
            android:textColor="#690050"
            android:textSize="70sp" />

        <Button
            android:id="@+id/sub"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="onClick"
            android:text="@string/sub"
            android:textColor="#690050"
            android:textSize="70sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/postfix_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/base_row"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/result_container"
        android:textSize="50sp"
        android:gravity="right"
        android:text="postfix" />

    <TextView
        android:id="@+id/infix_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/postfix_box"
        android:layout_alignLeft="@+id/postfix_box"
        android:layout_alignRight="@+id/postfix_box"
        android:gravity="right"
        android:text="infixfix"
        android:textSize="50sp" />

</RelativeLayout>